added a button for image analysis

--- a/public/capture.html
+++ b/public/capture.html
@@ -53,6 +53,13 @@
     <div class="container">
       <canvas class="d-none"></canvas>
       <img class="screenshot-image d-none" alt="" />
+      <button
+        type="button"
+        class="btn btn-primary analyze d-none"
+        title="Analyze"
+      >
+        CALCULATE
+      </button>
     </div>
     <!-- JavaScript -->
     <script src="./javascripts/capture.js"></script>
