skintone is displayed to user

--- a/public/capture.html
+++ b/public/capture.html
@@ -61,6 +61,9 @@
         ANALYZE
       </button>
       <p></p>
+      <div class="output"></div>
+      <br />
+      <br />
     </div>
     <!-- JavaScript -->
     <script src="./javascripts/capture.js"></script>
