got rid of media device selector

--- a/public/capture.html
+++ b/public/capture.html
@@ -20,14 +20,8 @@
     <!-- Video Feed -->
     <div class="display-cover">
       <video autoplay></video>
-      <!-- Video Options -->
-      <div class="video-options">
-        <select name="" id="" class="custom-select">
-          <option value="">Select camera</option>
-        </select>
-      </div>
       <!-- Outline -->
-      <img class="outline-image d-none" src="images/outline.png" alt="" />
+      <img class="outline d-none" src="images/outline.png" alt="" />
       <!-- Control Buttons -->
       <div class="controls">
         <button type="button" class="btn btn-primary play" title="Play">
