Front-end and back-end are connected

--- a/public/capture.html
+++ b/public/capture.html
@@ -60,6 +60,9 @@
       <p></p>
       <div class="result"></div>
       <br />
+      <button type="button" class="btn btn-primary match" title="Match">
+        FIND MY MATCH!
+      </button>
       <br />
     </div>
     <!-- JavaScript -->
