renamed capture.js file -> frontend.js

--- a/public/capture.html
+++ b/public/capture.html
@@ -66,6 +66,6 @@
       <br />
     </div>
     <!-- JavaScript -->
-    <script src="./javascripts/capture.js"></script>
+    <script src="./javascripts/frontend.js"></script>
   </body>
 </html>
