--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,13 @@
   <body>
     <!-- Header -->
     <header class="container-fluid">
-      <div class="row">
+      <div class="row text-center">
         <div class="col">
           <h1 class="display-6">WELCOME</h1>
         </div>
       </div>
     </header>
+    <!-- About -->
     <section class="about">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -28,10 +29,16 @@
             <div class="col-md-8">
               <h1 class="display-4">Color Matcher</h1>
               <p class="lead">
-                It can take weeks to find the right shade of foundation if
-                you're shopping online. Eliminate the guesswork by using this
-                color matcher! Try our easy to use color matcher and find the
-                right foundation for your skintone within minutes!
+                Buying makeup online is a huge timesave, but finding the right
+                shade of foundation is difficult if you can't test it out in
+                person. It can take weeks to find the right shade of foundation
+                through trial and error if you're shopping online. Eliminate the
+                guesswork by using this color matcher! Try my easy to use color
+                matcher and find the right foundation for your skintone within
+                minutes! Most online shops ask you 2-3 questions about your
+                skintone which leaves room for error. With this color matcher
+                you can determine your exact skintone and find the best product
+                for you faster.
               </p>
               <br />
               <a class="btn btn-outline-dark" href="capture.html" role="button"
@@ -48,7 +55,7 @@
                     href="https://pixabay.com/users/annaliseart-7089643/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=5262013"
                     >AnnaliseArt</a
                   >
-                  from
+                  on
                   <a
                     class="text-reset"
                     href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=5262013"
@@ -61,6 +68,75 @@
         </div>
       </div>
     </section>
+    <!-- Process -->
+    <section class="process">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <div class="row">
+            <h1 class="display-4 text-end">How it works</h1>
+          </div>
+          <br />
+          <div class="row steps">
+            <div class="col-md-4 step">
+              <img src="images/selfie.jpg" alt="" class="step1" />
+              <p class="fw-lighter text-muted text-center">
+                <small>
+                  Image by
+                  <a
+                    class="text-reset"
+                    href="https://unsplash.com/@thecreative_exchange?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                    >Creative Exchange</a
+                  >
+                  on
+                  <a class="text-reset" href="https://unsplash.com/"
+                    >Unsplash</a
+                  >
+                </small>
+              </p>
+              <img src="images/one.png" alt="" class="step-label" />
+              <h6 class="display-6">take your picture</h6>
+            </div>
+            <div class="col-md-4 step">
+              <img src="images/foundation.jpg" alt="" class="step2" />
+              <p class="fw-lighter text-muted text-center">
+                <small>
+                  Image by
+                  <a class="text-reset" href="https://www.pexels.com/@peg1997"
+                    >Pegah</a
+                  >
+                  on
+                  <a class="text-reset" href="https://www.pexels.com/"
+                    >Pexels</a
+                  >
+                </small>
+              </p>
+              <img src="images/two.png" alt="" class="step-label" />
+              <h6 class="display-6">get your skintone</h6>
+            </div>
+            <div class="col-md-4 step">
+              <img src="images/match.jpg" alt="" class="step3" />
+              <p class="fw-lighter text-muted text-center">
+                <small>
+                  Image by
+                  <a
+                    class="text-reset"
+                    href="https://unsplash.com/@parkstreet?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                    >Park Street</a
+                  >
+                  on
+                  <a class="text-reset" href="https://unsplash.com/"
+                    >Unsplash</a
+                  >
+                </small>
+              </p>
+              <img src="images/three.png" alt="" class="step-label" />
+              <h6 class="display-6">find your match</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="container-fluid">
       <div class="row">
