added instructions for taking picture

--- a/public/capture.html
+++ b/public/capture.html
@@ -40,15 +40,29 @@
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <div class="row tips">
-            <div class="col-lg-6">
+            <div class="col-lg-8">
               <h1 class="display-4">Tips for taking pictures</h1>
               <p class="lead">
                 To ensure the best match, follow these tips for taking the best
                 picture
               </p>
             </div>
+            <div class="col-lg-4"></div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <i class="bi bi-sun-fill"></i>
+                Take the picture in a well-lit room with plenty of natural light
+              </li>
 
-            <div class="col-lg-6"></div>
+              <li class="list-group-item">
+                <i class="bi bi-emoji-sunglasses"></i>
+                Remove any hats, glasses, or makeup before taking a picture
+              </li>
+              <li class="list-group-item">
+                <i class="bi bi-person-bounding-box"></i>
+                Position your face directly in front of the camera
+              </li>
+            </ul>
           </div>
         </div>
       </div>
